--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -2,9 +2,15 @@ background {
     monitor =
     path = ~/Downloads/Backgrounds-lock/gargantua-black-5200x3250-9621.jpg
     color = rgba(25, 20, 20, 1.0)
-    blur_passes = 2
+    blur_passes = 1
 }
 
+animations {
+	
+	animation = fadeIn, 1, 10, default
+	animation = fadeOut, 1, 5, default
+
+}
 
 input-field {
     monitor =
@@ -30,14 +36,60 @@ label {
 	monitor = 
 	text = Welcome back, $USER
 	color = rgba(200,200,200,1.0)
-	font_size = 30
+	font_size = 20
 	font_family = ttf-cascadia-code-nerd
 
-	position = 0,180
+	position = 0,25
 	halign = center
 	valign = center
 
 }
 
+label {
+    monitor =
+    text = cmd[update:1000] echo "$(date +'%H:%M')"
+    color = rgba(255, 255, 255, 1.0)
+    font_size = 90
+    font_family = SF Pro Display
+    position = 0, 200
+    halign = center
+    valign = center
+}
+
+label {
+    monitor =
+    text = cmd[update:60000] echo "$(date +'%A, %B %d')"
+    color = rgba(255, 255, 255, 1.0)
+    font_size = 30
+    font_family = SF Pro Text  
+    position = 0, 125
+    halign = center
+    valign = center
+}
+
+image {
+    monitor =  
+    path = ~/Downloads/Icons/Liebe.png 
+    size = 100 
+    rounding = -1 
+    border_size = 2 
+    border_color = rgba(255, 255, 255, 0.5)
+
+    position = 0, -300
+    halign = center
+    valign = center
+}
+
+label {
+	monitor = 
+	text = $USER
+	color = rgba(200,200,200,1.0)
+	font_size = 12
+	font_family = ttf-cascadia-code-nerd
+
+	position = 0,-375
+	halign = center
+	valign = center
+}
 
 
