--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -8,14 +8,14 @@
     // Choose the order of the modules
     "modules-left": [
         "hyprland/workspaces",
-        "custom/media",
-	"custom/spotify"
+        "custom/spotify",
     ],
     "modules-center": [
-        "hyprland/window"
-    ],
+        "hyprland/window",
+	
+	],
     "modules-right": [
-        "mpd",
+        
         "idle_inhibitor",
         "pulseaudio",
         "network",
@@ -23,11 +23,8 @@
         "cpu",
         "memory",
         "temperature",
-        "backlight",
         "keyboard-state",
         "sway/language",
-        "battery",
-        "battery#bat2",
         "clock",
         "tray",
         "custom/power"
@@ -36,7 +33,7 @@
      "hyprland/workspaces": {
          "disable-scroll": false,
          "all-outputs": true,
-         "warp-on-scroll": false,
+         "warp-on-scroll": true,
          "format": "{name}: {icon}",
          "format-icons": {
              "urgent": "",
@@ -63,32 +60,7 @@
         "tooltip": true,
         "tooltip-format": "{app}: {title}"
     },
-    "mpd": {
-        "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
-        "format-disconnected": "Disconnected ",
-        "format-stopped": "{consumeIcon}{randomIcon}{repeatIcon}{singleIcon}Stopped ",
-        "unknown-tag": "N/A",
-        "interval": 5,
-        "consume-icons": {
-            "on": " "
-        },
-        "random-icons": {
-            "off": "<span color=\"#f53c3c\"></span> ",
-            "on": " "
-        },
-        "repeat-icons": {
-            "on": " "
-        },
-        "single-icons": {
-            "on": "1 "
-        },
-        "state-icons": {
-            "paused": "",
-            "playing": ""
-        },
-        "tooltip-format": "MPD (connected)",
-        "tooltip-format-disconnected": "MPD (disconnected)"
-    },
+
     "idle_inhibitor": {
         "format": "{icon}",
         "format-icons": {
@@ -97,12 +69,12 @@
         }
     },
     "tray": {
-        // "icon-size": 21,
+        "icon-size": 21,
         "spacing": 10,
-        // "icons": {
-        //   "blueman": "bluetooth",
-        //   "TelegramDesktop": "$HOME/.local/share/icons/hicolor/16x16/apps/telegram.png"
-        // }
+        "icons": {
+           "blueman": "bluetooth",
+           "TelegramDesktop": "$HOME/.local/share/icons/hicolor/16x16/apps/telegram.png"
+         }
     },
     "clock": {
         "timezone": "Europe/London",
@@ -117,36 +89,14 @@
         "format": "{}% "
     },
     "temperature": {
-        // "thermal-zone": 2,
-        // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
+        //"thermal-zone": 2,
+        "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
         "critical-threshold": 80,
-        // "format-critical": "{temperatureC}°C {icon}",
+        "format-critical": "{temperatureC}°C {icon}",
         "format": "{temperatureC}°C {icon}",
         "format-icons": ["", "", ""]
     },
-    "backlight": {
-        // "device": "acpi_video1",
-        "format": "{percent}% {icon}",
-        "format-icons": ["", "", "", "", "", "", "", "", ""]
-    },
-    "battery": {
-        "states": {
-            // "good": 95,
-            "warning": 30,
-            "critical": 15
-        },
-        "format": "{capacity}% {icon}",
-        "format-full": "{capacity}% {icon}",
-        "format-charging": "{capacity}% ",
-        "format-plugged": "{capacity}% ",
-        "format-alt": "{time} {icon}",
-        // "format-good": "", // An empty format will hide the module
-        // "format-full": "",
-        "format-icons": ["", "", "", "", ""]
-    },
-    "battery#bat2": {
-        "bat": "BAT2"
-    },
+   
     "power-profiles-daemon": {
       "format": "{icon}",
       "tooltip-format": "Power profile: {profile}\nDriver: {driver}",
@@ -187,28 +137,14 @@
         "on-click": "pavucontrol"
     },
 
-
-    "custom/media": {
-        "format": "{icon} {text}",
-        "return-type": "json",
-        "max-length": 40,
-        "format-icons": {
-            "spotify": "",
-            "default": "🎜"
-        },
-        "escape": true,
-        "exec": "$HOME/.config/waybar/mediaplayer.py 2> /dev/null" // Script in resources folder
-        // "exec": "$HOME/.config/waybar/mediaplayer.py --player spotify 2> /dev/null" // Filter player based on name
-    },
-
     "custom/spotify": {
         "format": " {}",
         "format-tooltip": "Spotify: {}",
         "exec": "/usr/bin/python3 ~/dotfiles/Spotify/mediaplayer.py --player spotify",
         "return-type": "json",
-        "on-click": "playerctl play-pause",
-    	"on-scroll-up": "playerctl next",
-    	"on-scroll-down": "playerctl previous"
+        "on-click": "playerctl --player=spotify play-pause",
+    	"on-scroll-up": "playerctl --player=spotify next",
+    	"on-scroll-down": "playerctl --player=spotify previous"
         
     },
 
