--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,8 +24,11 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor= DP-3, 2560x1440@170 , 0x0 ,auto
-monitor= HDMI-A-1,preferred, 2560x0,auto
+monitor= HDMI-A-1,preferred, 2560x0, 0.8333
 
+xwayland {
+	force_zero_scaling = true
+}
 ###################
 ### MY PROGRAMS ###
 ###################
