Update waybar weather-time widget to switch back to clock after timeout

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,12 +23,15 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor= DP-3, 2560x1440@170 , 0x0 ,auto
-monitor= HDMI-A-1,preferred, 2560x0, 0.8333
+monitor= DP-6, 2560x1440@170 , 0x0 ,auto
+monitor= HDMI-A-2, 1920x1080, 2560x0, 0.8333
+
+monitor= HDMI-A-1, 1920x1080, 2560x0, 0.8333
 
 xwayland {
 	force_zero_scaling = true
 }
+
 ###################
 ### MY PROGRAMS ###
 ###################
@@ -47,6 +50,10 @@ $menu = wofi --show drun
 
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
+
+#specific startup setup:
+#windowrule = workspace 2, ^(.*Spotify.*)$
+exec-once = [workspace 2 silent] spotify
 
 # exec-once = $terminal
 # exec-once = nm-applet &
@@ -166,7 +173,7 @@ animations {
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
 # "Smart gaps" / "No gaps when only"
 
-workspace = name:1, monitor:DP-3
+workspace = name:1, monitor:DP-6
 
 # uncomment all if you wish to use that.
 # workspace = w[tv1], gapsout:0, gapsin:0
@@ -250,6 +257,8 @@ bind = , PRINT, exec, hyprshot -m window
 bind = , PAUSE, exec, hyprshot -m region
 
 bind = $SUPER_SHIFT, l ,exec,hyprlock
+
+bind = $SUPER_SHIFT, W, exec, ~/.config/hypr/scripts/wallpaper_changer
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
