added wifi selector and up/down bandwidth inspect toggle

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -42,7 +42,7 @@ xwayland {
 $terminal = kitty
 $fileManager = thunar
 $menu = wofi --show drun
-
+$util = rofi -show combi
 
 #################
 ### AUTOSTART ###
@@ -57,7 +57,7 @@ exec-once = [workspace 2 silent] spotify
 
 # exec-once = $terminal
 # exec-once = nm-applet &
-exec-once = waybar & hyprpaper & hypridle 
+exec-once = waybar & hyprpaper & hypridle  
 exec-once = swaync
 exec-once = hyprctl dispatch workspace 1
 
@@ -251,6 +251,7 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $SUPER_SHIFT, space, exec, $util 
 
 #USER BINDS:
 bind = , PRINT, exec, hyprshot -m window
