Added notification centre to waybar

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,8 +23,8 @@
 ################
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor= DP-6, 2560x1440@170 , 0x0 ,auto
-monitor= HDMI-A-2, 1920x1080, 2560x0, 0.8333
+monitor= DP-6, 2560x1440@170.00 , 0x0 ,auto
+monitor= HDMI-A-2, 1920x1080@240, 2560x0, 0.8333
 
 monitor= HDMI-A-1, 1920x1080, 2560x0, 0.8333
 
@@ -100,7 +100,6 @@ general {
     gaps_out = 20
 
     border_size = 2
-
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = rgba(595959aa)
