polishing up some configs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -24,8 +24,9 @@
 
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor= DP-6, 2560x1440@170.00 , 0x0 ,auto
-monitor= HDMI-A-2, 1920x1080@240, 2560x0, 0.8333
+monitor= HDMI-A-2, 1920x1080@60, 2560x0, 0.8333
 
+monitor= DP-3, 2560x1440@170.00 , 0x0 ,auto
 monitor= HDMI-A-1, 1920x1080, 2560x0, 0.8333
 
 xwayland {
@@ -40,7 +41,7 @@ xwayland {
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = thunar
+$fileManager = thunar 
 $menu = wofi --show drun
 $util = rofi -show combi
 
@@ -172,7 +173,10 @@ animations {
 # Ref https://wiki.hyprland.org/Configuring/Workspace-Rules/
 # "Smart gaps" / "No gaps when only"
 
-workspace = name:1, monitor:DP-6
+
+workspace = name:1, monitor:DP-3
+
+workspace = name:2, monitor:HDMI-A-2
 
 # uncomment all if you wish to use that.
 # workspace = w[tv1], gapsout:0, gapsin:0
@@ -250,7 +254,9 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
-bind = $SUPER_SHIFT, space, exec, $util 
+bind = $SUPER_SHIFT, space, exec, $util
+
+bind = $mainMod, F, fullscreen, 1
 
 #USER BINDS:
 bind = , PRINT, exec, hyprshot -m window
