Added basic toggle to go between pre-selected static and live wallpapers

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -264,7 +264,7 @@ bind = , PAUSE, exec, hyprshot -m region
 
 bind = $SUPER_SHIFT, l ,exec,hyprlock
 
-bind = $SUPER_SHIFT, W, exec, ~/.config/hypr/scripts/wallpaper_changer
+bind = $SUPER_SHIFT, W, exec, ~/.config/hypr/scripts/toggle_wallpaper_mode.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, h, movefocus, l
